tests/sources/invalid/match/match_missing_scrutinee.fire
// Parser error: 'match' with no scrutinee expression before the body.

void match_missing_scrutinee() {
    int32 x = match { _ -> 1 };  //~ ERROR FS-PARSE-0012 @21
//~^ ERROR FS-PARSE-0010 @23
//~^^ ERROR FS-PARSE-0010 @23
//~^^^ ERROR FS-PARSE-0010 @23
}
